Fix layout error on mobile and add prefixer for CSS3

--- a/_compass/styles.scss
+++ b/_compass/styles.scss
@@ -57,10 +57,6 @@ h2 {
     margin: 0.1rem 0;
 }
 
-.post-header {
-    width: 30rem;
-    margin: auto;
-}
 
 p {
     text-align: justify;
@@ -231,12 +227,13 @@ $interval-size: $range / $intervals !default;
 }
 
 .site-footer {
-    width: 20rem;
+    width: 17rem;
     margin: auto;
     text-align: center;
 }
 
 .post-header {
+    hyphens: none;
     .post-meta {
         text-align: center;
     }
@@ -295,6 +292,13 @@ $interval-size: $range / $intervals !default;
     .navbar .nav-header {
         display: inline-block;
         .clearfix { display: none; }
+    }
+}
+
+@include media-breakpoint-up(md) {
+    .post-header {
+        width: 30rem;
+        margin: auto;
     }
 }
 
